# during

./: .codecov.yml  .envrc  .gitignore  .html  .travis.yml  CHANGELOG.md  Makefile  README.md  betterc_ut.sh  dub.sdl  dub.selections.json  during.Nop.html  during.RW.html  during.RW.this.html  during.RWFixed.html  during.RWFixed.this.html  during.RWMsg.html  during.RWMsg.this.html  during.ReadFixed.html  during.Readv.html  during.RecvMsg.html  during.SendMsg.html  during.Uring.capacity.html  during.Uring.dropped.html  during.Uring.empty.html  during.Uring.fd.html  during.Uring.finish.html  during.Uring.finishCq.html  during.Uring.finishSq.html  during.Uring.front.html  during.Uring.full.html  during.Uring.html  during.Uring.length.html  during.Uring.next.html  during.Uring.overflow.html  during.Uring.params.html  during.Uring.popFront.html  during.Uring.put.1.html  during.Uring.put.2.html  during.Uring.put.html  (+117 more)
.github/workflows/: ci.yml
examples/echo_server/: Makefile  README.md  dub.sdl  dub.selections.json
examples/echo_server/source/: app.d
examples/futex_pingpong/: dub.sdl  dub.selections.json
examples/futex_pingpong/source/: app.d
examples/zerocopy_echo/: dub.sdl
examples/zerocopy_echo/source/: app.d
source/: during.d.html  during.io_uring.d.html  during.openat2.d.html  during.tests.api.d.html  during.tests.base.d.html  during.tests.d.html  during.tests.fsync.d.html  during.tests.msg.d.html  during.tests.rw.d.html
source/during/: io_uring.d  openat2.d  package.d
source/during/tests/: api.d  base.d  fsync.d  msg.d  package.d  rw.d
tests/: api.d  base.d  cancel.d  dub.sdl  dub_root.d  epoll_wait.d  fake_dub_root.d  fixed_fd.d  fsync.d  futex.d  helpers.d  msg.d  package.d  pipe.d  poll.d  register.d  rw.d  socket.d  sqe128.d  thread.d  timeout.d  wait_reg.d  waitid.d  zerocopy.d
tests/source/during/tests/: nop.d
